--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>ph: 91+ 9361420688</p>
+<p>Email: vskawin@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  chormet , chennai<br />
+  chennai<br />
+  India <br />
 </p>
