--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,14 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>Best Movies Watched in 2025</h1>
+
+<h2>Top 3 Movies</h2>
+
+<hr/>
+
+<h3>F1</h3>
+<p>The Cinematography is Great , They Showed a Whole f1 Racing in a cinematic way</p>
+
+<h3>Family Man (Tamil)</h3>
+<p>Movies is about the a dad how carries his whole family and pratecting them </p>
+
+<h3>Coolie</h3>
+<p>It's a Sci-Fi Movie with lots of Action</p>
